# fitness-merge

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/db/: models.py  session.py
app/integrations/: strava.py
app/parsers/: __init__.py  fit_parser.py  gpx_parser.py  registry.py  tcx_parser.py
app/schemas/: __init__.py  activity.py
app/services/: ingest.py  matching.py  merge.py  strava_tokens.py
app/static/: app.js  index.html  styles.css
